--- a/_posts/2000-01-02-calendar.md
+++ b/_posts/2000-01-02-calendar.md
@@ -5,13 +5,15 @@ color: white
 fa-icon: calendar
 ---
 
+Click the events in the calendar for details. Disable your popup blocker if nothing pops up.
+
 <div id='loading' style='display:none'>loading...</div>
 
 <div id='calendar'>
 	<div id="calendar_options" align="right"></div>
 </div>
 <script>
-    document.getElementById("calendar_options").innerHTML = "<a href='http://www.google.com/calendar/ical/" + google_calendar + "/public/basic.ics'>Add to your calendar</a> - <a href='http://chadnorwood.com/gcm/?gc=" + google_calendar + "'>view as map</a>";
+    document.getElementById("calendar_options").innerHTML = "<a href='http://www.google.com/calendar/ical/" + google_calendar + "/public/basic.ics'>Add to your calendar</a>";
 </script>
 
 ### Definitions
