changes for pandemic

--- a/_posts/2000-01-02-calendar.md
+++ b/_posts/2000-01-02-calendar.md
@@ -5,22 +5,8 @@ color: white
 fa-icon: calendar
 ---
 
-Click the events in the calendar for details. Disable your popup blocker if nothing pops up.
+During the pandemic we are hosting online conditioning jams on Mondays & Wednesdays at 19:30. Join us in our [digital acro playground](https://home.gregology.net/acrojam)! There is also an online acro class on Friday the 20th of March at 19:30 in the same digital space.
 
-<div id='loading' style='display:none'>loading...</div>
+[home.gregology.net/acrojam](https://home.gregology.net/acrojam)
 
-<div id='calendar'>
-	<div id="calendar_options" align="right"></div>
-</div>
-<script>
-    document.getElementById("calendar_options").innerHTML = "<a href='http://www.google.com/calendar/ical/" + google_calendar + "/public/basic.ics'>Add to your calendar</a>";
-</script>
-
-### Definitions
-
-* Jams: Informal gatherings to play and practice, no formal instruction or start time. Turn up whenever you want.
-* Classes: Weekly formal instruction to develop your Acroyoga practice.
-* Workshops: A more indepth Acroyoga experience.
-* Performances: Members of our community performing to the public.
-
-*Please [contact](/#contact) us if you would like to add your Jams, Classes, Workshops, or Performances to the calendar.*
+Checkout [this article](https://gregology.net/2020/03/how-to-video-chat/) with tips on how to video chat.
