actually remove calander

--- a/_posts/2000-01-02-calendar.md
+++ b/_posts/2000-01-02-calendar.md
@@ -5,8 +5,8 @@ color: white
 fa-icon: calendar
 ---
 
-During the pandemic we are hosting online conditioning jams on Mondays & Wednesdays at 19:30. Join us in our [digital acro playground](https://home.gregology.net/acrojam)! There is also an online acro class on Friday the 20th of March at 19:30 in the same digital space.
+### During the pandemic we are hosting online conditioning jams on Mondays & Wednesdays at 19:30. Join us in our [digital acro playground](https://home.gregology.net/acrojam)! There is also an online acro class on Friday the 20th of March at 19:30 in the same digital space.
 
-[home.gregology.net/acrojam](https://home.gregology.net/acrojam)
+### [home.gregology.net/acrojam](https://home.gregology.net/acrojam)
 
-Checkout [this article](https://gregology.net/2020/03/how-to-video-chat/) with tips on how to video chat.
+### Checkout [this article](https://gregology.net/2020/03/how-to-video-chat/) with tips on how to video chat.
